[gd_scene load_steps=3 format=2]

[ext_resource path="res://subscenes/broadcast/full_screen_round/round_full_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://subscenes/broadcast/full_screen_round/swiss_full_screen.gd" type="Script" id=2]

[node name="SwissFullScreen" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Title" parent="PanelContainer/Main" index="0"]
text = "Swiss round"

[node name="Columns" type="HBoxContainer" parent="PanelContainer/Main/Container" index="0"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1708.0
margin_bottom = 986.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayersLeft" type="VBoxContainer" parent="PanelContainer/Main/Container/Columns" index="0"]
margin_right = 678.0
margin_bottom = 981.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MapPool" type="VBoxContainer" parent="PanelContainer/Main/Container/Columns" index="1"]
margin_left = 682.0
margin_right = 1021.0
margin_bottom = 981.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty" type="Control" parent="PanelContainer/Main/Container/Columns/MapPool" index="0"]
margin_right = 339.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )

[node name="Label" type="Label" parent="PanelContainer/Main/Container/Columns/MapPool" index="1"]
margin_top = 44.0
margin_right = 339.0
margin_bottom = 85.0
size_flags_horizontal = 3
text = "Map pool"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Main/Container/Columns/MapPool" index="2"]
margin_top = 89.0
margin_right = 339.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 5 )

[node name="PlayersRight" type="VBoxContainer" parent="PanelContainer/Main/Container/Columns" index="2"]
margin_left = 1025.0
margin_right = 1703.0
margin_bottom = 981.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
